<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_propios"
            android:title="@string/menu_org_propios" />
        <item
            android:id="@+id/nav_crear"
            android:title="@string/menu_org_crear" />
        <item
            android:id="@+id/nav_datos"
            android:title="@string/menu_org_datos" />
        <item
            android:id="@+id/nav_config"
            android:title="@string/menu_org_config" />
        <item
            android:id="@+id/nav_salir"
            android:title="@string/menu_org_salir" />
    </group>

</menu>
